Adding angular stuff
Adding angular stuff

--- a/DependencyInjectionCourse/AutofacWebMvcFive/AutofacWebMvcFive.csproj
+++ b/DependencyInjectionCourse/AutofacWebMvcFive/AutofacWebMvcFive.csproj
@@ -198,6 +198,8 @@
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Home\CustomIocJs.cshtml" />
+    <Content Include="Views\Home\AngularJs.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
